close overlap with scroll fixed

--- a/aemedge/blocks/modal/modal.css
+++ b/aemedge/blocks/modal/modal.css
@@ -1,6 +1,6 @@
-body.modal-open {
+/* body.modal-open {
     overflow: hidden;
-  }
+  } */
   
   .modal dialog {
     --dialog-border-radius: 16px;
